kuber-homeworks_1.4/deployment-task2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: myapp
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: frontend
        image: nginx:latest
        ports:
        - containerPort: 80
      - name: backend
        image: wbitt/network-multitool
        command: ["/bin/sh"]
        args: ["-c", "sleep infinity"]
        ports:
        - containerPort: 8080
