kuber-homeworks_1.4/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-backend
spec:
  selector:
    app: myapp
  ports:
    - name: multitool
      protocol: TCP
      port: 9002
      targetPort: 80
