kuber-homeworks_1.4/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-frontend
spec:
  selector:
    app: myapp
  ports:
    - name: frontend
      protocol: TCP
      port: 9001
      targetPort: 80
