kuber-homeworks_1.4/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-nodeport
  namespace: default
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - name: nginx
      protocol: TCP
      nodePort: 30080
      port: 80
